--- a/05-Guess-My-Number/style.css
+++ b/05-Guess-My-Number/style.css
@@ -117,3 +117,62 @@ h1 {
 .label-score {
   margin-bottom: 2rem;
 }
+
+/* Screen view for smaller screen */
+@media screen and (max-width: 700px) {
+  h1 {
+    font-size: 25px;
+    line-height: 50px;
+  }
+
+  .btn {
+    border: none;
+    background-color: #eee;
+    color: #222;
+    font-size: 1rem;
+    font-family: inherit;
+    padding: 1rem 2rem;
+    cursor: pointer;
+  }
+
+  .guess {
+    background: none;
+    border: 4px solid #eee;
+    font-family: inherit;
+    color: inherit;
+    font-size: 3rem;
+    padding: 1.5rem;
+    width: 13rem;
+    text-align: center;
+    display: block;
+    margin-bottom: 2rem;
+  }
+  .message {
+    margin-bottom: 8rem;
+    height: 3rem;
+    font-size: 15px;
+  }
+
+  .label-score {
+    margin-bottom: 5rem;
+    font-size: 15px;
+  }
+
+  .label-highscore {
+    margin-bottom: 5rem;
+    font-size: 15px;
+  }
+
+  .number {
+    background: #eee;
+    color: #333;
+    font-size: 3rem;
+    width: 10rem;
+    padding: 1rem 0rem;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, 50%);
+  }
+}
